--- a/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
@@ -16,23 +16,28 @@
 
 @helper UserGamification(string alias)
 {
-
-        <div class="bg-l"></div>
-        <div class="bg-r"></div>
-        <div class="gamification-data">
-            <span class="title">@GamificationResources.Rank</span>
-            <span class="value" ng-bind="::@(alias).rank"></span>
+    <div class="bg-l"></div>
+    <div class="bg-r"></div>
+    <div class="vertical">
+        <div class="gamification-data rank">
+            <div class="content">
+                <span class="title">@GamificationResources.Rank</span>
+                <span class="value" ng-bind="::@(alias).rank"></span>
+            </div>
         </div>
         <div class="middle">
             <div class="image-progress">
-                <md-progress-circular md-mode="determinate" value="{{@(alias).progress}}" md-diameter="120px"></md-progress-circular>
+                <md-progress-circular md-mode="determinate" value="{{@(alias).progress}}" md-diameter="112px"></md-progress-circular>
                 <user-image class="img-circle" name="::@(alias).name" image="::@(alias).image" width="106" height="106" @*noremove="true"*@></user-image>
             </div>
-            <span class="name" ng-bind="::@(alias).name"></span>
-            <span class="level" ng-bind="::@(alias).levelName"></span>
         </div>
-        <div class="gamification-data">
-            <span class="title">@UserResources.Points</span>
-            <span class="value" ng-bind="::@(alias).points"></span>
+        <div class="gamification-data points">
+            <div class="content">
+                <span class="title">@UserResources.Points</span>
+                <span class="value" ng-bind="::@(alias).points"></span>
+            </div>
         </div>
+    </div>
+    <span class="name" ng-bind="::@(alias).name"></span>
+    <span class="level" ng-bind="::@(alias).levelName"></span>
 }
