--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
@@ -14,25 +14,27 @@
         </div>*@
     <div class="users" layout="row" layout-padding layout-wrap vs-repeat="65" vs-scroll-parent="window">
         <a ui-sref="user({userId:user.id,userName:user.name})" class="user-data" ng-repeat="user in g.leaderboard track by user.id">
-            <div class="rank">
-                <span ng-bind="::($index+1 + startIndex)"></span>
-            </div>
-            @*<a class="img-wrapper" >*@
-            <user-image class="img-circle" name="user.name" image="user.image" width="45" height="45"></user-image>
-            @*</a>*@
-            <div class="progress-user">
-                <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::user.progress}}"></md-progress-linear>
-                <div class="name"><span class="ellipsis" ng-bind="::user.name"></span></div>
-            </div>
+            <div class="content">
+                <div class="rank">
+                    <span ng-bind="::($index+1 + startIndex)"></span>
+                </div>
+                @*<a class="img-wrapper" >*@
+                <user-image class="img-circle" name="user.name" image="user.image" width="45" height="45"></user-image>
+                @*</a>*@
+                <div class="progress-user">
+                    <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::user.progress}}"></md-progress-linear>
+                    <div class="name"><span class="ellipsis" ng-bind="::user.name"></span></div>
+                </div>
 
-            <div class="text">
-                <div class="points" ng-bind="::user.score | megaNumber : 2"></div>
-                <div ng-bind="::user.levelName"></div>
-                @*<ng-pluralize class="badges" count="user.badges" when="{
-                    'one': '{} @GamificationResources.Badge',
-                    'two': '{} @GamificationResources.Badges',
-                    'other' : '{} @GamificationResources.Badges'
-                    }"></ng-pluralize>*@
+                <div class="text">
+                    <div class="points" ng-bind="::user.score | megaNumber : 2"></div>
+                    <div ng-bind="::user.levelName"></div>
+                    @*<ng-pluralize class="badges" count="user.badges" when="{
+                'one': '{} @GamificationResources.Badge',
+                'two': '{} @GamificationResources.Badges',
+                'other' : '{} @GamificationResources.Badges'
+                }"></ng-pluralize>*@
+                </div>
             </div>
             @*<div  ng-bind="::user.score"></div>*@
         </a>
